linked css js codes to the html file

--- a/Price-card-challenge/index.html
+++ b/Price-card-challenge/index.html
@@ -1,27 +1,39 @@
-<div class="card">
-    <div class="box-1">
-      <h2>Join our community</h2>
-      <h4>30-day, hassle-free money back guarentee</h4>
-      <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
-    </div><div class="box-2"><div class="left-box">
-        <h3>Monthly Subscription</h3>
-        <div id="price-container">
-          <div id="price">$29</div>
-          <div id="price-frequency">per month</div>
+<html>
+  <head>
+    <title>Price Card</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="card">
+        <div class="box-1">
+          <h2>Join our community</h2>
+          <h4>30-day, hassle-free money back guarentee</h4>
+          <p>Gain access to our full library of tutorials along with expert code reviews. Perfect for any developers who are serious about honing their skills.</p>
+        </div><div class="box-2"><div class="left-box">
+            <h3>Monthly Subscription</h3>
+            <div id="price-container">
+              <div id="price">$29</div>
+              <div id="price-frequency">per month</div>
+            </div>
+            <p>Full access for less than $1 a day</p>
+            <button onclick="alertUser()">Sign Up</button>
+          </div><div class="right-box">
+          <h3>Why Us</h3>
+            <ul>
+              <li>Tutorials by industry expert</li>
+              <li>Poor & expert code review</li>
+              <li>Coding exercises</li>
+              <li>Access to our Github repos</li>
+              <li>Community forum</li>
+              <li>Flashcard decks</li>
+              <li>New videos every week</li>
+            </ul>
         </div>
-        <p>Full access for less than $1 a day</p>
-        <button onclick="alertUser()">Sign Up</button>
-      </div><div class="right-box">
-      <h3>Why Us</h3>
-        <ul>
-          <li>Tutorials by industry expert</li>
-          <li>Poor & expert code review</li>
-          <li>Coding exercises</li>
-          <li>Access to our Github repos</li>
-          <li>Community forum</li>
-          <li>Flashcard decks</li>
-          <li>New videos every week</li>
-        </ul>
       </div>
-     </div>
-  </div>
+    </div>
+    <script src="./script.js"></script>
+  </body>
+</html>
